# docrender

./: Cargo.toml
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/engine/: Cargo.toml  package.json
src/engine/src/: gdoc.rs  ir.rs  lib.rs  list.rs  parser.rs  prism.js  render.rs  style.rs  syntax_highlighting.rs
src/engine/src/markup_generator/: html.rs  jsx.rs  mod.rs
src/engine/test-data/actual/: demo.json  headings.json  images.json  links.json  lists.json  paragraph.json  politique-de-gestion-des-donnees-personnelles.json  text-style.json
src/engine/test-data/actual/sauleau.com/: Lambda-Calculus-Functional-condition.json  SNI-support-in-SMTP.json  disassemble-a-go-binary.json  the-pipeline-operator-is-already-available-in-JavaScript.json
src/engine/test-data/expected/: demo.html  demo.ir  demo.jsx  headings-table-of-contents.html  headings.html  headings.ir  images.html  images.ir  links.html  links.ir  lists.html  lists.ir  paragraph.html  paragraph.jsx  politique-de-gestion-des-donnees-personnelles.html  politique-de-gestion-des-donnees-personnelles.ir  politique-de-gestion-des-donnees-personnelles.jsx  text-style.html  text-style.ir
src/engine/test-data/expected/sauleau.com/: Lambda-Calculus-Functional-condition.html  Lambda-Calculus-Functional-condition.ir  Lambda-Calculus-Functional-condition.jsx  SNI-support-in-SMTP.html  SNI-support-in-SMTP.ir  SNI-support-in-SMTP.jsx  disassemble-a-go-binary.html  disassemble-a-go-binary.ir  disassemble-a-go-binary.jsx  the-pipeline-operator-is-already-available-in-JavaScript.html  (+2 more)
