[package]
name = "docrender"
description = "Transform Google Documents into HTML or JSX"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
docrender-engine = { path = "../engine" }
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
