[package]
name = "docrender-engine"
description = "docrender engine"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
html-escape = "0.2.13"
urlencoding = "2.1.3"
hex = "0.4.3"
wasm-bindgen = "0.2.92"
sha2 = "0.10.8"
regex = "1"

[dev-dependencies]
paste = "1.0.15"
pretty_assertions = "1.4.0"
ron = "0.8.1"
